# human-safety-hackathon

./: .env.example  README.md  pyproject.toml
backend/: settings.py
backend/ai/: flow.py
backend/ai/danger_type_agent/: crew.py  main.py  schemas.py
backend/ai/danger_type_agent/config/: agents.yaml  tasks.yaml
backend/ai/decision_agent/: crew.py  main.py  schemas.py
backend/ai/decision_agent/config/: agents.yaml  tasks.yaml
backend/ai/message_agent/: main.py  schemas.py
backend/ai/message_agent/config/: agents.yaml  tasks.yaml
backend/ai/temp/: README.md  pyproject.toml
backend/ai/temp/src/temp/: crew.py  main.py
