[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.7",
    "crewai-tools>=1.14.7",
    "fastapi>=0.137.1",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
